--- a/notes.ipynb
+++ b/notes.ipynb
@@ -63,6 +63,21 @@
    "source": [
     "## I can DO THIS :-> "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* rn I am at \n",
+    "\n",
+    "1. getProfile where I need to fetch the investment from the backend for this to work or else we are not going back .....\n",
+    "2. 4 in the morning signing off .... "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
